--- a/angular1/app/dashboard/dashboard.html
+++ b/angular1/app/dashboard/dashboard.html
@@ -1,14 +1,14 @@
 <content-header name="Dashboard" small="Versão 1.0"></content-header>
 
-<section class="content" ng-controller="DashboardCtrl">   
+<section class="content" ng-controller="DashboardCtrl as dashboard">   
 
-    <value-box grid="4" color-class="bg-green" value="R$ {{ credit | number: 2 }}" icon-class="fa fa-bank" 
+    <value-box grid="4" color-class="bg-green" value="R$ {{ dashboard.credit | number: 2 }}" icon-class="fa fa-bank" 
         text="Total de Créditos"></value-box>
 
-    <value-box grid="4" color-class="bg-red" value="R$ {{ debt | number: 2 }}" icon-class="fa fa-credit-card"
+    <value-box grid="4" color-class="bg-red" value="R$ {{ dashboard.debt | number: 2 }}" icon-class="fa fa-credit-card"
          text="Total de Débitos"></value-box>
          
-    <value-box grid="4" color-class="bg-blue" value="R$ {{ total | number: 2 }}" icon-class="fa fa-money"
+    <value-box grid="4" color-class="bg-blue" value="R$ {{ dashboard.total | number: 2 }}" icon-class="fa fa-money"
          text="Valor Consolidado"></value-box>
 
 </section>
