--- a/angular1/app/billingCycle/form.html
+++ b/angular1/app/billingCycle/form.html
@@ -1,13 +1,27 @@
 <div role="form">
     <div class="box-body">
-        <field id="name" label="Nome" grid="12 6 4" placeholder="Informe o Nome"></field>
-        <field id="month" label="Mês" grid="12 6 4" placeholder="Informe o Mês" type="number"></field>
-        <field id="year" label="Ano" grid="12 6 4" placeholder="Informe o Ano" type="number"></field>
+        <field id="name" label="Nome" grid="12 6 4" placeholder="Informe o Nome" model="bcCtrl.billingCycle.name" readonly="bcCtrl.tabDelete"></field>
+        <field id="month" label="Mês" grid="12 6 4" placeholder="Informe o Mês" type="number" model="bcCtrl.billingCycle.month" readonly="bcCtrl.tabDelete"></field>
+        <field id="year" label="Ano" grid="12 6 4" placeholder="Informe o Ano" type="number" model="bcCtrl.billingCycle.year" readonly="bcCtrl.tabDelete"></field>
+    
+        <div class="col-xs-12 col-sm-6">
+            <fieldset>
+                <legend>Créditos</legend>
+                <div ng-include="'billingCycle/creditList.html'"></div>
+            </fieldset>
+        </div>
+
+        <div class="col-xs-12 col-sm-6">
+            <fieldset>
+                <legend>Débitos</legend>
+                <div ng-include="'billingCycle/debtList.html'"></div>
+            </fieldset>
+        </div>
     </div>
     <div class="box-footer">
-        <button class="btn btn-primary">Incluir</button>
-        <button class="btn btn-info">Alterar</button>
-        <button class="btn btn-danger">Excluir</button>
-        <button class="btn btn-dafault">Cancelar</button>
+        <button class="btn btn-primary" ng-if="bcCtrl.tabCreate" ng-click="bcCtrl.create()">Incluir</button>
+        <button class="btn btn-info" ng-if="bcCtrl.tabUpdate" ng-click="bcCtrl.update()">Alterar</button>
+        <button class="btn btn-danger" ng-if="bcCtrl.tabDelete" ng-click="bcCtrl.delete()">Excluir</button>
+        <button class="btn btn-dafault" ng-click="bcCtrl.refresh()">Cancelar</button>
     </div>
 </div>
